Remove final CTA section from homepage and transition all Waitlist buttons to trigger the modal experience.

--- a/api.html
+++ b/api.html
@@ -94,10 +94,10 @@
                             </div>
                         </div>
                         <div class="mega-menu-footer">
-                            <a href="/index.html#signup" class="footer-action">
+                            <a href="/index.html" class="footer-action">
                                 <i>📅</i> Book your demo
                             </a>
-                            <a href="/index.html#signup" class="footer-action">
+                            <a href="/index.html" class="footer-action">
                                 <i>⚡</i> Start your free trial
                             </a>
                             <a href="/api.html" class="footer-action">
@@ -113,7 +113,7 @@
             <div class="nav-right">
                 <a href="https://nyra-webservice-dev-kxi49.ondigitalocean.app/login" target="_blank"
                     rel="noopener noreferrer" class="nav-link-login">Login</a>
-                <a href="/index.html#signup" class="btn btn-primary btn-nav desktop-only-cta">Join Waitlist</a>
+                <a href="/index.html" class="btn btn-primary btn-nav desktop-only-cta">Join Waitlist</a>
                 <button class="mobile-menu-btn" aria-label="Toggle Navigation Menu">
                     <span class="bar"></span>
                     <span class="bar"></span>
@@ -212,7 +212,7 @@
                 <h3 style="font-size: 20px; margin-bottom: 16px; color: #fff;">Get Early Access</h3>
                 <p style="color: var(--text-muted); margin-bottom: 24px;">Join the waitlist to be notified when the API
                     launches.</p>
-                <a href="/#signup" class="btn btn-primary" style="display: inline-flex; font-size: 16px;">Join API
+                <a href="//index.html" class="btn btn-primary" style="display: inline-flex; font-size: 16px;">Join API
                     Waitlist →</a>
             </div>
         </section>
@@ -222,7 +222,7 @@
                 <div class="quote-reveal-card">
                     <h2>Build with the power of <span class="text-highlight">Authority</span></h2>
                     <div class="cta-reveal-group">
-                        <a href="#signup" class="btn btn-primary btn-large">Request API Keys &rarr;</a>
+                        <a href="/index.html" class="btn btn-primary btn-large">Request API Keys &rarr;</a>
                     </div>
                 </div>
             </div>
