--- a/index.html
+++ b/index.html
@@ -102,10 +102,10 @@
                             </div>
                         </div>
                         <div class="mega-menu-footer">
-                            <a href="#signup" class="footer-action">
+                            <a href="javascript:void(0)" class="footer-action open-waitlist">
                                 <i>📅</i> Book your demo
                             </a>
-                            <a href="#signup" class="footer-action">
+                            <a href="javascript:void(0)" class="footer-action open-waitlist">
                                 <i>⚡</i> Start your free trial
                             </a>
                             <a href="/api.html" class="footer-action">
@@ -117,12 +117,14 @@
                 <a href="use-cases.html">Use Cases</a>
                 <a href="#faq">FAQ</a>
                 <a href="contact.html">Contact</a>
-                <a href="#signup" class="btn btn-primary btn-nav mobile-only-cta">Join Waitlist</a>
+                <a href="javascript:void(0)" class="btn btn-primary btn-nav open-waitlist mobile-only-cta">Join
+                    Waitlist</a>
             </nav>
             <div class="nav-right">
                 <a href="https://nyra-webservice-dev-kxi49.ondigitalocean.app/login" target="_blank"
                     rel="noopener noreferrer" class="nav-link-login">Login</a>
-                <a href="#signup" class="btn btn-primary btn-nav desktop-only-cta">Join Waitlist</a>
+                <a href="javascript:void(0)" class="btn btn-primary btn-nav open-waitlist desktop-only-cta">Join
+                    Waitlist</a>
                 <button class="mobile-menu-btn" aria-label="Toggle Navigation Menu">
                     <span class="bar"></span>
                     <span class="bar"></span>
@@ -156,7 +158,8 @@
                     <p class="lead">Stop guessing who moves the needle. NYRA provides the intelligence layer to identify
                         true authority, forecast impact, and orchestrate precision influencer activations at scale.</p>
                     <div class="hero-ctas">
-                        <a href="#signup" class="btn btn-large btn-primary">Join the Waiting List for Early Access
+                        <a href="javascript:void(0)" class="btn btn-large btn-primary open-waitlist">Join the Waiting
+                            List for Early Access
                             &rarr;</a>
                         <div class="hero-stats">
                             <span>Authority Mapping</span>
@@ -201,7 +204,8 @@
                         <h2>Unlock The Authority Graph™</h2>
                         <p class="sticky-lead">Boost your B2B strategy with our proprietary intelligence gathering. We
                             turn vague "influence" into structured, actionable data.</p>
-                        <a href="#signup" class="btn btn-primary btn-large">Get Early Access &rarr;</a>
+                        <a href="javascript:void(0)" class="btn btn-primary btn-large open-waitlist">Get Early Access
+                            &rarr;</a>
                     </div>
                 </div>
 
@@ -336,204 +340,6 @@
         </section>
 
 
-        <!-- USE CASES CONSOLE -->
-        <section class="use-cases-interactive reveal-on-scroll" id="use-cases">
-            <div class="container">
-                <div class="section-header text-center">
-                    <span class="badge">The Intelligence Layer</span>
-                    <h2>From Guestimates to Science</h2>
-                    <p class="lead">Most influencer tools are just glorified databases. NYRA is an intelligence layer
-                        that identifies true authority, forecasts campaign velocity, and turns influence into a
-                        predictable B2B channel.</p>
-                </div>
-
-                <div class="console-wrapper glass-dark">
-                    <!-- Left: Menu -->
-                    <div class="console-menu">
-                        <!-- Category 1 -->
-                        <div class="category-group active">
-                            <div class="category-header">
-                                <span class="category-title">The Reach Engine</span>
-                                <span class="category-arrow">▼</span>
-                            </div>
-                            <div class="category-subs">
-                                <div class="menu-item active" data-id="awareness">
-                                    <span class="icon">📢</span>
-                                    <h3>Awareness & Velocity</h3>
-                                </div>
-                                <div class="menu-item" data-id="event">
-                                    <span class="icon">🎯</span>
-                                    <h3>Event Domination</h3>
-                                </div>
-                                <div class="menu-item" data-id="education">
-                                    <span class="icon">📚</span>
-                                    <h3>Category Education</h3>
-                                </div>
-                            </div>
-                        </div>
-
-                        <!-- Category 2 -->
-                        <div class="category-group">
-                            <div class="category-header">
-                                <span class="category-title">The Authority Lab</span>
-                                <span class="category-arrow">▼</span>
-                            </div>
-                            <div class="category-subs">
-                                <div class="menu-item" data-id="thought">
-                                    <span class="icon">💡</span>
-                                    <h3>Thought Partnership</h3>
-                                </div>
-                                <div class="menu-item" data-id="whitepaper">
-                                    <span class="icon">📄</span>
-                                    <h3>Research Co-Creation</h3>
-                                </div>
-                                <div class="menu-item" data-id="technical">
-                                    <span class="icon">🔧</span>
-                                    <h3>Technical Validation</h3>
-                                </div>
-                            </div>
-                        </div>
-
-                        <!-- Category 3 -->
-                        <div class="category-group">
-                            <div class="category-header">
-                                <span class="category-title">The Social Proof</span>
-                                <span class="category-arrow">▼</span>
-                            </div>
-                            <div class="category-subs">
-                                <div class="menu-item" data-id="review">
-                                    <span class="icon">⭐</span>
-                                    <h3>Objective Reviews</h3>
-                                </div>
-                                <div class="menu-item" data-id="reputation">
-                                    <span class="icon">🛡️</span>
-                                    <h3>Reputation Defense</h3>
-                                </div>
-                                <div class="menu-item" data-id="affinity">
-                                    <span class="icon">❤️</span>
-                                    <h3>Alignment Strategy</h3>
-                                </div>
-                            </div>
-                        </div>
-
-                        <!-- Category 4 -->
-                        <div class="category-group">
-                            <div class="category-header">
-                                <span class="category-title">The Conversion Hub</span>
-                                <span class="category-arrow">▼</span>
-                            </div>
-                            <div class="category-subs">
-                                <div class="menu-item" data-id="affiliate">
-                                    <span class="icon">💎</span>
-                                    <h3>High-Ticket Affiliates</h3>
-                                </div>
-                                <div class="menu-item" data-id="sales">
-                                    <span class="icon">🤝</span>
-                                    <h3>Sales Intelligence</h3>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-
-                    <!-- Right: Dashboard UI -->
-                    <div class="dashboard-ui">
-                        <div class="dash-top-nav">
-                            <div class="breadcrumbs">
-                                <span class="crumb-light">Campaigns</span>
-                                <span class="crumb-sep">/</span>
-                                <span class="crumb-light" id="dash-campaign">GTM Strategy</span>
-                                <span class="crumb-sep">/</span>
-                                <span class="crumb-active">Discover</span>
-                            </div>
-                            <div class="dash-user">
-                                <div class="user-avatar">OU</div>
-                            </div>
-                        </div>
-
-                        <div class="dash-filters">
-                            <div class="filter-pill active">Fit Score: 80%+</div>
-                            <div class="filter-pill">Authority: High</div>
-                            <div class="filter-pill">Location: Global</div>
-                            <div class="filter-pill">Sentiment: Positive</div>
-                        </div>
-                        <div class="dash-description" id="dash-description">
-                            Select a use case from the left to see how NYRA helps you find the right authority figures
-                            and influence your niche.
-                        </div>
-
-                        <div class="dash-content">
-                            <div class="dash-header-row">
-                                <h4 id="dash-results-title">Key Voices (Top 1%)</h4>
-                                <div class="sort-dropdown">Sort by: Relevance ▾</div>
-                            </div>
-
-                            <div class="dash-cards-container" id="dash-cards">
-                                <!-- Dynamic Cards Injected via JS or Default Static -->
-                                <div class="dash-card">
-                                    <div class="card-head">
-                                        <div class="avatar-circle avatar-c1"></div>
-                                        <div class="card-meta">
-                                            <div class="name">Dr. Elena Rostova</div>
-                                            <div class="handle">@AI_Ethics_Lab</div>
-                                        </div>
-                                        <div class="score-badge">98% Fit</div>
-                                    </div>
-                                    <div class="card-body">
-                                        <div class="stat-row">
-                                            <div class="stat">
-                                                <label>Authority</label>
-                                                <div class="progress">
-                                                    <div class="fill" style="width: 95%"></div>
-                                                </div>
-                                            </div>
-                                            <div class="stat">
-                                                <label>Reach</label>
-                                                <div class="val">245k</div>
-                                            </div>
-                                            <div class="stat">
-                                                <label>Eng.</label>
-                                                <div class="val">4.2%</div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-
-                                <div class="dash-card">
-                                    <div class="card-head">
-                                        <div class="avatar-circle avatar-c2"></div>
-                                        <div class="card-meta">
-                                            <div class="name">Marcus Chen</div>
-                                            <div class="handle">@TechVantage</div>
-                                        </div>
-                                        <div class="score-badge">94% Fit</div>
-                                    </div>
-                                    <div class="card-body">
-                                        <div class="stat-row">
-                                            <div class="stat">
-                                                <label>Authority</label>
-                                                <div class="progress">
-                                                    <div class="fill" style="width: 88%"></div>
-                                                </div>
-                                            </div>
-                                            <div class="stat">
-                                                <label>Reach</label>
-                                                <div class="val">850k</div>
-                                            </div>
-                                            <div class="stat">
-                                                <label>Eng.</label>
-                                                <div class="val">2.8%</div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>
-
 
 
 
@@ -580,21 +386,6 @@
                         <p>See how a Series B startup generated $2M in pipeline using only micro-influencers.</p>
                         <span class="read-more">Read Insight &rarr;</span>
                     </a>
-                </div>
-            </div>
-        </section>
-
-        <!-- FINAL CTA -->
-        <section class="final-cta reveal-on-scroll" id="signup">
-            <div class="container glass-gradient">
-                <div class="final-content">
-                    <h2>We’re Redefining Influence for the B2B Era</h2>
-                    <p>Join the early adopters using NYRA to go beyond followers and find trusted experts who actually
-                        move the needle.</p>
-                    <div class="cta-group">
-                        <button class="btn btn-primary">Download Product Overview</button>
-                        <button class="btn btn-outline">Subscribe to Newsletter</button>
-                    </div>
                 </div>
             </div>
         </section>
@@ -701,7 +492,8 @@
                 <div class="quote-reveal-card">
                     <h2>Discover the power of <span class="text-highlight">Authority</span></h2>
                     <div class="cta-reveal-group">
-                        <a href="#signup" class="btn btn-primary btn-large">Join the Waitlist &rarr;</a>
+                        <a href="javascript:void(0)" class="btn btn-primary btn-large open-waitlist">Join the Waitlist
+                            &rarr;</a>
                     </div>
                 </div>
             </div>
