--- a/insights.html
+++ b/insights.html
@@ -94,10 +94,10 @@
                             </div>
                         </div>
                         <div class="mega-menu-footer">
-                            <a href="/index.html#signup" class="footer-action">
+                            <a href="/index.html" class="footer-action">
                                 <i>📅</i> Book your demo
                             </a>
-                            <a href="/index.html#signup" class="footer-action">
+                            <a href="/index.html" class="footer-action">
                                 <i>⚡</i> Start your free trial
                             </a>
                             <a href="/api.html" class="footer-action">
@@ -113,7 +113,7 @@
             <div class="nav-right">
                 <a href="https://nyra-webservice-dev-kxi49.ondigitalocean.app/login" target="_blank"
                     rel="noopener noreferrer" class="nav-link-login">Login</a>
-                <a href="/index.html#signup" class="btn btn-primary btn-nav desktop-only-cta">Join Waitlist</a>
+                <a href="/index.html" class="btn btn-primary btn-nav desktop-only-cta">Join Waitlist</a>
                 <button class="mobile-menu-btn" aria-label="Toggle Navigation Menu">
                     <span class="bar"></span>
                     <span class="bar"></span>
@@ -417,7 +417,7 @@
                         Let's discuss your intelligence needs and build a custom reporting solution.</p>
                     <div style="display: flex; gap: 16px; justify-content: center; flex-wrap: wrap;">
                         <a href="/contact.html" class="btn btn-primary" style="font-size: 16px;">Get Started →</a>
-                        <a href="/#signup" class="btn btn-secondary" style="font-size: 16px;">Join Waitlist</a>
+                        <a href="//index.html" class="btn btn-secondary" style="font-size: 16px;">Join Waitlist</a>
                     </div>
                 </div>
             </div>
