--- a/contact.html
+++ b/contact.html
@@ -172,10 +172,10 @@
                             </div>
                         </div>
                         <div class="mega-menu-footer">
-                            <a href="/index.html#signup" class="footer-action">
+                            <a href="/index.html" class="footer-action">
                                 <i>📅</i> Book your demo
                             </a>
-                            <a href="/index.html#signup" class="footer-action">
+                            <a href="/index.html" class="footer-action">
                                 <i>⚡</i> Start your free trial
                             </a>
                             <a href="/api.html" class="footer-action">
@@ -191,7 +191,7 @@
             <div class="nav-right">
                 <a href="https://nyra-webservice-dev-kxi49.ondigitalocean.app/login" target="_blank"
                     rel="noopener noreferrer" class="nav-link-login">Login</a>
-                <a href="/index.html#signup" class="btn btn-primary btn-nav desktop-only-cta">Join Waitlist</a>
+                <a href="/index.html" class="btn btn-primary btn-nav desktop-only-cta">Join Waitlist</a>
                 <button class="mobile-menu-btn" aria-label="Toggle Navigation Menu">
                     <span class="bar"></span>
                     <span class="bar"></span>
