--- a/use-cases.html
+++ b/use-cases.html
@@ -95,10 +95,10 @@
                             </div>
                         </div>
                         <div class="mega-menu-footer">
-                            <a href="/index.html#signup" class="footer-action">
+                            <a href="/index.html" class="footer-action">
                                 <i>📅</i> Book your demo
                             </a>
-                            <a href="/index.html#signup" class="footer-action">
+                            <a href="/index.html" class="footer-action">
                                 <i>⚡</i> Start your free trial
                             </a>
                             <a href="/api.html" class="footer-action">
@@ -114,7 +114,7 @@
             <div class="nav-right">
                 <a href="https://nyra-webservice-dev-kxi49.ondigitalocean.app/login" target="_blank"
                     rel="noopener noreferrer" class="nav-link-login">Login</a>
-                <a href="/index.html#signup" class="btn btn-primary btn-nav desktop-only-cta">Join Waitlist</a>
+                <a href="/index.html" class="btn btn-primary btn-nav desktop-only-cta">Join Waitlist</a>
                 <button class="mobile-menu-btn" aria-label="Toggle Navigation Menu">
                     <span class="bar"></span>
                     <span class="bar"></span>
@@ -303,7 +303,7 @@
                     <p>Stop guessing who matters. Use NYRA to identify and engage the experts who actually move your
                         needle.</p>
                     <div class="cta-group">
-                        <a href="/index.html#signup" class="btn btn-primary">Join the Waitlist</a>
+                        <a href="/index.html" class="btn btn-primary">Join the Waitlist</a>
                         <a href="/contact.html" class="btn btn-outline">Consult an Expert</a>
                     </div>
                 </div>
