Implement premium Careers page and unify footer-modern design across all site sections.

--- a/solutions/reach-awareness.html
+++ b/solutions/reach-awareness.html
@@ -156,9 +156,50 @@
         </section>
     </main>
 
-    <footer class="footer">
+    <footer class="footer-modern">
         <div class="container">
-            <p>&copy; 2026 NYRA Intelligence. All rights reserved.</p>
+            <div class="footer-top">
+                <div class="footer-brand">
+                    <div class="logo">
+                        <span class="logo-text">NYRA</span>
+                        <span class="logo-tagline">Influence Intelligence</span>
+                    </div>
+                    <p class="brand-desc">The influence intelligence layer for B2B. Map authority, forecast impact, and
+                        activate the voices that move your market.</p>
+                </div>
+
+                <div class="footer-nav">
+                    <div class="nav-col">
+                        <h4>Product</h4>
+                        <a href="/index.html#solutions">Features</a>
+                        <a href="/use-cases.html">Use Cases</a>
+                        <a href="/api.html">API Access</a>
+                    </div>
+                    <div class="nav-col">
+                        <h4>Company</h4>
+                        <a href="/careers.html">Careers</a>
+                        <a href="/contact.html">Contact</a>
+                        <a href="/privacy.html">Privacy Policy</a>
+                    </div>
+                </div>
+
+                <div class="footer-newsletter">
+                    <h4>Stay Ahead</h4>
+                    <p>Join our newsletter for the latest B2B influence insights.</p>
+                    <form class="newsletter-form" onsubmit="event.preventDefault();">
+                        <input type="email" placeholder="Enter your email" aria-label="Email address for newsletter">
+                        <button type="submit" class="btn-icon" aria-label="Subscribe">&rarr;</button>
+                    </form>
+                </div>
+            </div>
+
+            <div class="footer-bottom">
+                <p>&copy; 2026 NYRA Intelligence. All rights reserved.</p>
+                <div class="legal-links">
+                    <a href="/privacy.html">Privacy Policy</a>
+                    <a href="#">Terms of Service</a>
+                </div>
+            </div>
         </div>
     </footer>
 
